# CHECK_APPLICATION

./: .env  .gitignore  DOCKER_HUB_README.md  Dockerfile  README.md  entrypoint.sh  logical_dfd_diagram  pyproject.toml  requirements.txt  test.py
check_server/: admin.py  apps.py  check_functions.py  connect_server.py  forms.py  get_log.py  models.py  send_telegram_notifacation.py  tasks.py  test_file.txt  tests.py  update_delete_views.py  urls.py  views.py
check_server/migrations/: 0001_initial.py  0002_alter_alert_time.py  0003_rename_ip_server_ipv4_alter_server_unique_together.py  0004_domain_alert_domain.py  0005_domain_server.py  0006_company_application_company_domain_company_and_more.py  0007_remove_company_bot_token.py  0008_company_date_joined_company_updated.py  0009_alter_application_unique_together.py  0010_alter_application_options.py  0011_dockerapplication.py  0012_alert_docker.py
check_server/static/: index.js  login.css  scripts.js  styles.css
check_server/templates/: add_server.html  app.html  applications.html  base_generic.html  domains.html  index.html  log.html  login.html
core/: __init__.py  celery.py  settings.py  urls.py
